--- a/xeno/build.gradle
+++ b/xeno/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
-        versionName "0.1"
+        versionName "0.2"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -23,6 +23,7 @@ android {
             debuggable = true
         }
         release {
+            minifyEnabled true
             debuggable = false
         }
     }
