--- a/xeno/src/main/AndroidManifest.xml
+++ b/xeno/src/main/AndroidManifest.xml
@@ -2,11 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="app.xenoapp.sdk">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application>
         <activity
                 android:name=".ui.XenoActivity"
                 android:screenOrientation="portrait"
                 android:theme="@android:style/Theme.NoTitleBar"/>
     </application>
-
 </manifest>
